--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.4.7
   firebase_auth: ^3.8.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
