--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.4.7
   firebase_auth: ^3.8.0
+  flutter_local_notifications: ^9.9.1
+  flutter_native_timezone: ^2.0.0
+  timezone: ^0.8.0
 
 dev_dependencies:
   flutter_test:
